# quietset

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  README_ja.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/quietset/: Cargo.toml
crates/quietset-cli/: Cargo.toml
crates/quietset-cli/src/: main.rs
crates/quietset-cli/tests/: cli.rs
crates/quietset-py/: Cargo.toml  pyproject.toml
crates/quietset-py/src/: lib.rs
crates/quietset/benches/: scoring.rs
crates/quietset/src/: agreement.rs  calibration.rs  config.rs  decision.rs  error.rs  group.rs  lib.rs  metrics.rs  observation.rs  schema.rs  scoring.rs  stream.rs  weighting.rs
crates/quietset/tests/: integration_test.rs
examples/: game_search.jsonl  llm_judge.jsonl
tasks/: lessons.md  todo.md
tests/fixtures/: budget_sensitive.jsonl  label_split.jsonl  noisy.jsonl  simple.jsonl  sparse.jsonl  stable_scores.jsonl
