[package]
name = "quietset-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI for quietset — filter datasets by label stability"
repository = "https://github.com/kent-tokyo/quietset"

[[bin]]
name = "quietset"
path = "src/main.rs"

[dependencies]
quietset = { path = "../quietset" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
csv = "1"
