[package]
name = "quietset-cli"
version = "0.8.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI for quietset — filter datasets by label stability"
repository = "https://github.com/kent-tokyo/quietset"
homepage = "https://github.com/kent-tokyo/quietset"
readme = "../../README.md"
keywords = ["dataset", "label", "stability", "filtering", "cli"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "quietset"
path = "src/main.rs"

[dependencies]
quietset = { version = "0.8.0", path = "../quietset" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
csv = "1"

[dev-dependencies]
assert_cmd = "2"
